instead of creating a separate running instance using the user preference
settings for opening new files in tabs or windows.
+Updated translations
+Shelf window tabs are now shown on the bottom to keep the shelf controls
closer to the editor buffer.
+Add Revert to Saved menu action for reverting a file back to the last save
point.

BUG FIXES:
+Add missing Portuguese locale files to setup script
+Fix some clipboard and dnd bugs
+Fix window scrolling issue when executing some vi commands
+Fix error when creating file position cache file fails
+Fix numerous Style Editor bugs

#-----------------------------------------------------------------------------#

VERSION 0.3.15
DATE 06/15/2008
13th Alpha Release

NEWS:

This release was originally intended to be a minor bug fix release but has
expanded to include a number of new features and additions as well. The most
visual change is the new application icon that was designed and submitted to
the community forum by Kurt Schelin. 

All of the bundled plugins have recieved overhauls and updates. From this
version when the bundled plugins are updated the will only be available with
the updated Editra code as they are often only compatible with the most recent
release.


NEW: [features/improvements]
+New application icon (designed by Kurt Schelin)
+Multi-line comments are foldable in C/CPP/D
+New version of CodeBrowser (improved python, added sql)
+New version of FileBrowser
+New version of Launch (add shortcut, custom colors, auto clear option)
+Interface font is configurable
+Add Norwegian Nynorsk Translation (contributed by JoNNeMaNN)
+Add French Translation
+Add Brazilian Portuguese Translation (contributed by Ricardo Crudo)
+Add Ukrainian Translation (contributed by Igor Chomko)
+New bundled style sheet 'Mocha'
+Improved context menu behavior
+Can toggle status bar visibility

BUG FIXES:
+Add missing keywords for DOS Batch scripts
+Ensure text that is folded becomes visible when searching for it